fix alignment of rename button

--- a/client/assets/styles/scss/components/cards-title.scss
+++ b/client/assets/styles/scss/components/cards-title.scss
@@ -95,7 +95,7 @@
 
   // rename button for verification flow
   .btn-xxs {
-    margin: 3px 0 0 6px;
+    margin: 6px 0 0 6px;
     position: absolute;
   }
 }
